gcc/testsuite/rust/rustc/ui/suggestions/js-style-comparison-op-separate-eq-token.rs
fn main() {
    if 1 == = 1 { // { dg-error "" "" { target *-*-* } }
        println!("yup!");
    }
}

